scrollbars should no longer appear when no scrolling is available on chrome (why tf)

--- a/frontend/shared.css
+++ b/frontend/shared.css
@@ -129,7 +129,7 @@
   max-width: 100%;
   height: max-content;
   row-gap: 0px;
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
   scrollbar-width: thin;
 }
